bug fixed on route and indexing